--- a/index.html
+++ b/index.html
@@ -11,37 +11,43 @@
         <form id="assessmentForm" action="https://formspree.io/f/xyzygbaq" method="POST">
             <h1>Assessment Form</h1>
 
-            <h2>Section 1</h2>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
+            <div id="section1">
+                <h2>Section 1</h2>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
 
-            <label for="age">Age:</label>
-            <input type="number" id="age" name="age" required>
+                <label for="age">Age:</label>
+                <input type="number" id="age" name="age" required>
 
-            <h2>Section 2: Personality Test</h2>
-            <p id="timer">Time remaining: <span id="time">15:00</span></p>
+                <button type="button" id="nextButton">Next</button>
+            </div>
 
-            <p>1. "In a party, I will... / Pada sebuah pesta, apakah Anda..."</p>
-            <label>
-                <input type="radio" name="party" value="hang out with a lot of people, including people i just meet / bergaul dengan banyak orang termasuk orang-orang yang baru saya kenal" required>
-                hang out with a lot of people, including people I just meet / bergaul dengan banyak orang termasuk orang-orang yang baru saya kenal
-            </label>
-            <label>
-                <input type="radio" name="party" value="hang out with people I already know / bergaul dengan beberapa orang yang telah saya kenal saja">
-                hang out with people I already know / bergaul dengan beberapa orang yang telah saya kenal saja
-            </label>
+            <div id="section2" style="display: none;">
+                <h2>Section 2: Personality Test</h2>
+                <p id="timer">Time remaining: <span id="time">15:00</span></p>
 
-            <p>2. "I am a _______ person / Saya adalah seseorang yang ____"</p>
-            <label>
-                <input type="radio" name="personality" value="Realistic / Realistic" required>
-                Realistic / Realistic
-            </label>
-            <label>
-                <input type="radio" name="personality" value="Speculative / Spekulatif">
-                Speculative / Speculative
-            </label>
+                <p>1. "In a party, I will... / Pada sebuah pesta, apakah Anda..."</p>
+                <label>
+                    <input type="radio" name="party" value="hang out with a lot of people, including people I just meet / bergaul dengan banyak orang termasuk orang-orang yang baru saya kenal" required>
+                    hang out with a lot of people, including people I just meet / bergaul dengan banyak orang termasuk orang-orang yang baru saya kenal
+                </label>
+                <label>
+                    <input type="radio" name="party" value="hang out with people I already know / bergaul dengan beberapa orang yang telah saya kenal saja">
+                    hang out with people I already know / bergaul dengan beberapa orang yang telah saya kenal saja
+                </label>
 
-            <button type="submit">Submit</button>
+                <p>2. "I am a _______ person / Saya adalah seseorang yang ____"</p>
+                <label>
+                    <input type="radio" name="personality" value="Realistic / Realistic" required>
+                    Realistic / Realistic
+                </label>
+                <label>
+                    <input type="radio" name="personality" value="Speculative / Spekulatif">
+                    Speculative / Speculative
+                </label>
+
+                <button type="submit">Submit</button>
+            </div>
         </form>
     </div>
     <script src="script.js"></script>
