--- a/index.html
+++ b/index.html
@@ -3,53 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assessment Form</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Google Form on GitHub Pages</title>
 </head>
 <body>
-    <div class="container">
-        <form id="assessmentForm" action="https://formspree.io/f/xyzygbaq" method="POST">
-            <h1>Assessment Form</h1>
-
-            <div id="section1">
-                <h2>Section 1</h2>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="age">Age:</label>
-                <input type="number" id="age" name="age" required>
-
-                <button type="button" id="nextButton">Next</button>
-            </div>
-
-            <div id="section2" style="display: none;">
-                <h2>Section 2: Personality Test</h2>
-                <p id="timer">Time remaining: <span id="time">15:00</span></p>
-
-                <p>1. "In a party, I will... / Pada sebuah pesta, apakah Anda..."</p>
-                <label>
-                    <input type="radio" name="party" value="hang out with a lot of people, including people I just meet / bergaul dengan banyak orang termasuk orang-orang yang baru saya kenal" required>
-                    hang out with a lot of people, including people I just meet / bergaul dengan banyak orang termasuk orang-orang yang baru saya kenal
-                </label>
-                <label>
-                    <input type="radio" name="party" value="hang out with people I already know / bergaul dengan beberapa orang yang telah saya kenal saja">
-                    hang out with people I already know / bergaul dengan beberapa orang yang telah saya kenal saja
-                </label>
-
-                <p>2. "I am a _______ person / Saya adalah seseorang yang ____"</p>
-                <label>
-                    <input type="radio" name="personality" value="Realistic / Realistic" required>
-                    Realistic / Realistic
-                </label>
-                <label>
-                    <input type="radio" name="personality" value="Speculative / Spekulatif">
-                    Speculative / Speculative
-                </label>
-
-                <button type="submit">Submit</button>
-            </div>
-        </form>
-    </div>
-    <script src="script.js"></script>
+    <h1>My Google Form</h1>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSde722k5hHHr3_09dzhKlxGX9UdK-LRCgZSIBn7htnf7knRNA/viewform?embedded=true" width="640" height="16462" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </body>
 </html>
